[package]
name = "eggersmann_app_server_eggersmannusacom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
image = "*"
scraper = "*"
rocket = { version = "*", features = ['json'] }
reqwest = { version = "*", features = ["cookies", "blocking", "json", "rustls-tls"] }