[package]
name = "eggersmann_app_server_eggersmannusacom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
scraper = "0.19"
rocket = { version = "0.5", features = ['json'] }
reqwest = { version = "0.12", features = ["cookies", "blocking", "json", "rustls-tls"] }